kind/network-policies/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: kind
  labels:
    name: kind
    usage: twitter-series
