kind/network-policies/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: kind
  labels:
    env: twitter-series
    type: network-policies
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
