kind/network-policies/allow-ingress-80-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-allow-ingress-http
  namespace: kind
spec:
  podSelector:
    matchLabels:
      type: network-policies
  ingress:
  - from:
      - ipBlock:
          cidr: 0.0.0.0/0
    ports:
      - protocol: TCP
        port: 80          
  policyTypes:
  - Ingress
