kind/network-policies/allow-ingress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-allow-ingress
  namespace: kind
spec:
  podSelector: {}
  ingress:
  - {}  
  policyTypes:
  - Ingress
