kind/network-policies/deny-egress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-deny-egress
  namespace: kind
spec:
  podSelector: {}
  policyTypes:
  - Egress
